# target-redshift

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.json  meltano.yml  pyproject.toml  test.ipynb
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  pull-request.yaml  test.yml
target_redshift/: __init__.py  connector.py  sinks.py  target.py
tests/: __init__.py  test_core.py
tests/data/: test_data.singer
